# owl-tech

./: .gitignore  README.md
api/: main.py  pyproject.toml  test_main.py
api/data/: models.py  test_utils.py  utils.py
ui/web/: .env.example  package-lock.json  package.json
ui/web/src/: App.test.tsx  App.tsx  StockPage.tsx  index.tsx
ui/web/src/components/: YearSelector.tsx
ui/web/src/hooks/: useAvailableYears.tsx
ui/web/src/pages/: HomePage.tsx  StockPage.tsx
