[tool.poetry]
name = "owl api"
version = "0.1.0"
description = ""
authors = ["landoDev <landonlewisturner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
pandas = "^2.1.3"
httpx = "^0.25.2"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
